--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,3 +1,5 @@
+<%t= User.last%>
+<% if t%>
 <nav class="navbar navbar-expand-lg navbar-light ">
   <!-- Container wrapper -->
   <div class="container-fluid">
@@ -26,10 +28,10 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Quiz</a>
+          <a class="nav-link" href="quiz/creategame">Quiz</a>
         </li>
         <li class="nav-item"  onclick="displayUser()">
-          <%# <a class="nav-link" href="#">Contact</a> %> load
+          <a class="nav-link" href="#">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Review</a>
@@ -37,15 +39,8 @@
       </ul>
       <!-- Left links -->
     </div>
-    <!-- Collapsible wrapper -->
 
-    <!-- Right elements -->
     <div class="d-flex align-items-center">
-      <!-- Icon -->
-      <%# <button type="button" style="color: white" id="login">
-          LOGIN
-        </button> %>
-      <!-- Notifications -->
       <div class="dropdown">
       <a href="/users/login">
         <button type="button" id="btn"class="btn btn-primary me-3" >
@@ -104,6 +99,17 @@
   </div>
   <!-- Container wrapper -->
 </nav>
+<%else%>
+<nav class="navbar navbar-expand-lg navbar-light ">
+  <div class="d-flex align-items-center">
+      <div class="dropdown">
+      <a href="/users/login">
+        <button type="button" id="btn"class="btn btn-primary me-3 log">
+          Sign In
+        </button></a>
+      </div>
+    </nav>
+<%end%>
 
 <script>
 function displayUser(){
