--- a/app/views/quiz/form.html.erb
+++ b/app/views/quiz/form.html.erb
@@ -1,65 +1,8 @@
-<div class="game">
-
-<%t=Question.last%>
-<%case t.kind_of_question%>
-<% when "quiz"%>
-<div id="question">
-<form action="/question" method="post" id="main-form" >
- <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
- <textarea placeholder="Start typing your question" name="question" ></textarea>
-</div>
-<div class="vertical"></div>
-<div id="answer">
-<div class="opt1 opt">
-<input type="radio" id="html" name="option" placeholder="Add answer" value="a">
-<input type="text" name="option1" placeholder="Add answer 1"required>
-</div><br>
-<div class="opt2 opt">
-<input type="radio" id="html" name="option"  value="b">
-<input type="text" name="option2" placeholder="Add answer 2"required>
-</div><br>
-<div class="opt3 opt">
-<input type="radio" id="html" name="option" value="c">
-<input type="text" name="option3" placeholder="Add answer 3">
-</div><br>
-<div class="opt4 opt">
-<input type="radio" id="html" name="option" value="d">
-<input type="text" name="option4"placeholder="Add answer 4">
-</div><br>
-<button type="submit" id="save" value="Add">Save</button>
+<div class="assessment">
+<form action="/assessment" method="post">
+   <input type="text" name="name" placeholder="Assessment name ..." required><br>
+   <button type="submit" class="submit">Next</button>
+   <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
 </form>
-<%when "tf"%>
-<div id="question">
-<form action="/question" method="post" id="main-form" >
- <input type="hidden" name="authenticity_token" value=" form_authenticity_token">
- <textarea placeholder="Start typing your question" name="question" ></textarea>
 </div>
-<div class="vertical"></div>
-<div id="answer">
-<div class="opt1 opt">
-<input type="radio" id="html" name="option"  value="a">
-<input type="text" name="option1" placeholder="TRUE"required>
-</div><br>
-<div class="opt2 opt">
-<input type="radio" id="html" name="option"  value="b">
-<input type="text" name="option2" placeholder="FALSE" required>
-</div>
-<button type="submit" id="save" value="Add">Save</button>
-</form>
-<%when "fillup"%>
-<div id="fill_question">
-<form action="/question" method="post" id="main-form" >
- <input type="hidden" name="authenticity_token" value=" form_authenticity_token">
- <textarea style="text-align:center" placeholder="Start typing your question" name="question" ></textarea>
-</div>
-<div class="fillup">
-<input type="text" name="option1" placeholder="Type answer here .... "required>
-</div>
-
-<%end%>
-
-</div>
-<%# <% if flash[:error]%>
-<%# <p><%= flash[:error]</p> %>
-<%# <%end%><br>
-
+<%=image_tag( "enroll.png", alt: "like" ,class: "reg-bg") %>
