--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,57 +1,50 @@
-<div class="index">
-    <%=image_tag( "enroll.png", alt: "like" ,class: "reg-bg") %>
-
-        <div class="container">
-            <div class="whole">
-
-
-                <div class="btn-holder">
-
-
-                    <button class="sign_up" onclick="Register()"> Sign up</button> <button class="sign_in" onclick="login()"> Log in</button>
-                </div>
-                <%# <div class="register_form">
-Create new account.<br>
-            <p>Already a member <a href='/users/login' style="color:red;text-decoration:none;">  Login</a><p>
-</div> %>
-                    <div class="signup" id="up">
-                        <form class="form-box px-3" action="/save" method="post" onsubmit="check()">
-                            <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
-                            <div class="form-input">
-                                <span><i class="fa-solid fa-user"></i></span>
-                                <input type="text" name="users[name]" placeholder="Username" tabindex="10" required>
-                            </div>
-                            <div class="form-input">
-                                <span><i class="fa fa-envelope-o"></i></span>
-                                <input type="email" name="users[email]" placeholder="Mail Address" tabindex="10" required>
-                            </div>
-                            <div class="form-input">
-                                <span><i class="fa-solid fa-mobile"></i></span>
-                                <input type="tel" name="users[phone_no]" placeholder="Phone number" tabindex="10" required>
-                            </div>
-                            <div class="form-input">
-                                <span><i class="fa-solid fa-key"></i></span>
-                                <input type=" password" name="users[password]" placeholder="Create Password" required>
-                            </div>
-                            <div class="form-input">
-                                <span><i class="fa-solid fa-key"></i></span>
-                                <input type="password" name="" placeholder="Confirm Password" required>
-                            </div>
-                            <div class="mb-3">
-                                <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="cb1" name="">
-                                    <label class="custom-control-label" for="cb1">Show password</label>
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <button type="submit" class="btn btn-block ">
-              CREATE ACCOUNT
+<div class="signin" id="up">
+    <form class="form-box px-3" action="/save" method="post" onsubmit="check()">
+        <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
+        <div class="form-input">
+            <span><i class="fa-solid fa-user"></i></span>
+            <input type="text" name="users[name]" placeholder="Username" tabindex="10" required>
+        </div>
+        <div class="form-input">
+            <span><i class="fa fa-envelope-o"></i></span>
+            <input type="email" name="users[email]" placeholder="Mail Address" tabindex="10" required>
+        </div>
+        <div class="form-input">
+            <span><i class="fa-solid fa-mobile"></i></span>
+            <input type="tel" name="users[phone_no]" placeholder="Phone number" tabindex="10" required>
+        </div>
+        <div class="form-input">
+            <span><i class="fa-solid fa-key"></i></span>
+            <input type="password" name="users[password]" placeholder="Create Password" required>
+        </div>
+        <div class="form-input">
+            <span><i class="fa-solid fa-key"></i></span>
+            <input type="password" name="" placeholder="Confirm Password" required>
+        </div>
+        <div class="mb-3">
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="cb1" name="">
+                <label class="custom-control-label" for="cb1">Show password</label>
+            </div>
+        </div>
+        <div class="mb-3">
+            <button type="submit" class="btn btn-block ">
+                CREATE ACCOUNT
             </button>
-                            </div>
-                            <div class="text-right">
-                                <a href="#" class="forget-link" style="color:#ff574e">
-              Forgot Password?
+        </div>
+        <div class="text-right">
+            <a href="#" class="forget-link" style="color:#ff574e">
+                Forgot Password?
             </a>
-                            </div>
-                        </form>
-                    </div>
+        </div>
+        <div class="mb-2" style="color:black">
+            Always have an account
+            <a href="login" class="register-link" style="color:#ff574e">
+Login
+            </a>
+        </div>
+    </form>
+    <div>
+        <%=image_tag( "signup_img.webp", alt: "like", class:"signup_image" ) %>
+    </div>
+</div>
