adding some pages

--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -151,6 +151,13 @@ body {
     margin-left: 15%;
     border-radius: 20px;
 }
+.fpwd_image {
+    height: 700px;
+    width: 600px;
+    border-left: 20px;
+    margin-left: 15%;
+    border-radius: 20px;
+}
 
 .signup_image {
     height: 700px;
