--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -43,7 +43,7 @@
     <div class="d-flex align-items-center">
       <div class="dropdown">
       <a href="/users/login">
-        <button type="button" id="btn"class="btn btn-primary me-3" >
+        <button type="button">
           Sign In
         </button></a>
         <ul
@@ -62,7 +62,7 @@
         </ul>
       </div>
     <!-- Avatar -->
-     <div class="dropdown">
+     <div class="dropdown" >
         <a
           class="dropdown-toggle d-flex align-items-center hidden-arrow"
           href="#"
@@ -78,20 +78,22 @@
             alt="Black and White Portrait of a Man"
             loading="lazy"
           />
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"/></svg>
         </a>
         <ul
           class="dropdown-menu dropdown-menu-end"
           aria-labelledby="navbarDropdownMenuAvatar"
         >
           <li>
-            <a class="dropdown-item" href="#">My profile</a>
+            <a class="dropdown-item" href="/home/profile"><%= t.name%></a>
           </li>
           <li>
             <a class="dropdown-item" href="#">Settings</a>
           </li>
           <li>
-            <a class="dropdown-item" href="#">Logout</a>
+            <a class="dropdown-item" href="/logout">Logout</a>
           </li>
+
         </ul>
       </div>
     </div>
@@ -103,8 +105,8 @@
 <nav class="navbar navbar-expand-lg navbar-light ">
   <div class="d-flex align-items-center">
       <div class="dropdown">
-      <a href="/users/login">
-        <button type="button" id="btn"class="btn btn-primary me-3 log">
+      <a href="users/login">
+        <button type="button" id="btn"class="btn btn-primary me-3 log" onclick = "redirect_login()">
           Sign In
         </button></a>
       </div>
@@ -116,5 +118,8 @@ function displayUser(){
 var user = document.getElementById("user-register");
 user.classList.toggle("user-register")
 console.log("ace");
+}
+function redirect_login() {
+  window.location.href='/users/login';
 }
 </script>
