--- a/app/views/quiz/creategame.html.erb
+++ b/app/views/quiz/creategame.html.erb
@@ -5,7 +5,7 @@
 <a href="form"><%= image_tag("create_game.jpg", alt: "like" , class:"img_game") %></a></div>
 <div class="hosting_game">
 <h2>HOSTING QUIZ</h2><br>
-<%= image_tag("hosting.jpg", alt: "like" , class:"img_game") %></div>
+<a href="/assessments/display"><%= image_tag("hosting.jpg", alt: "like" , class:"img_game") %></a></div>
 <div class="dashboards">
 <h2>DASHBOARDS</h2><br>
 <%= image_tag("reports.webp", alt: "like" , class:"img_game") %></div>
