--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -10,7 +10,7 @@
                 font-family: 'Raleway', sans-serif;
                 scroll-behavior: smooth;
             }
-            
+
             .home {
                 // background-image: url("working.jpg");
                 // background-size: 100% 100%;
@@ -19,7 +19,7 @@
                 height: 800px;
                 text-align: center;
             }
-            
+
             .bg-img {
                 position: absolute;
                 height: 100%;
@@ -29,27 +29,27 @@
                 z-index: -10;
                 filter: brightness(50%);
             }
-            
+
             .home::before {
                 background: rgba(0, 0, 0, 0.65);
             }
-            
+
             .navbar {
                 box-shadow: none !important;
                 background-color: transparent!important;
                 color: white !important;
             }
-            
+
             .navbar-light .navbar-nav .nav-link {
                 color: white !important;
                 font-size: 20px;
                 font-weight: bold;
             }
-            
+
             .btn {
                 box-shadow: none !important;
             }
-            
+
             .column1 #img {
                 border-radius: 10px;
                 height: 370px;
@@ -59,40 +59,40 @@
                 margin-left: 5%;
                 margin-right: 3%;
             }
-            
+
             .row-1 {
                 display: inline-flex;
                 margin-top: 8%;
                 margin-right: 3%;
                 margin-left: -1% // margin-bottom: 5%;
             }
-            
+
             .row-1 #img1 {
                 border-radius: 10px;
                 height: 400px;
                 width: 550px;
                 margin-right: 3%;
             }
-            
+
             .row-1 #img2 {
                 border-radius: 10px;
                 height: 200px;
                 margin-top: 23%;
             }
-            
+
             .row-2 {
                 display: inline-flex;
                 margin-top: 2%;
                 margin-left: -1%;
             }
-            
+
             .row-2 #img1 {
                 border-radius: 10px;
                 height: 200px;
                 width: 300px;
                 margin-right: 3%;
             }
-            
+
             .row-2 #img2 {
                 border-radius: 10px;
                 margin-right: 3%;
@@ -100,7 +100,7 @@
                 width: 550px;
                 margin-bottom: 10%;
             }
-            
+
             .column2 #img {
                 margin-right: 5%;
                 margin-left: 3%;
@@ -109,31 +109,32 @@
                 margin-top: -35%;
                 border-radius: 10px;
             }
-            
+
             .lightbox {
                 margin-top: 15%;
             }
-            
+
             .heading {
                 margin-top: 15%;
                 text-align: center;
             }
-            
+
             nav {
                 /* box-shadow: 0 4px 12px 0 rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%); */
                 // padding-top: 0.5625rem;
                 background: #291c7e;
             }
-            
-            #btn {
-                font-weight: bold;
-                background-color: #ff574e;
-            }
-            
-            #btn:hover {
-                transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-            }
-            
+
+            // .btn_signin {
+            //     font-weight: bold;
+            //     background-color: #ff574e;
+            //     color: white !important;
+            // }
+
+            // .btn:hover {
+            //     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+            // }
+
             #login {
                 border: none;
                 background-color: transparent !important;
@@ -141,23 +142,23 @@
                 font-weight: bold;
                 margin-left: -10px;
             }
-            
+
             #login:hover {
                 color: #ff574e;
                 transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
             }
-            
+
             .nav-item:hover {
                 background-color: #ff574e;
                 color: white;
                 border-radius: 10px;
             }
-            
+
             .nav-item {
                 margin-right: 10%;
                 padding: 5px 5px;
             }
-            
+
             #log {
                 margin-top: 2%;
                 background-color: #ff574e;
@@ -167,11 +168,11 @@
                 border-radius: 10px;
                 font-size: 20px;
             }
-            
+
             #log:hover {
                 transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
             }
-            
+
             .container {
                 width: 1000px;
             }
