--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -217,10 +217,18 @@
                             font-weight: bold;
                             border-radius: 20px;
                             margin-top: 10%;
-                            margin-left: 300%;
+                            margin-left: 250%;
                         }
 
                         .fillup #save:hover {
                             background-color: #f1eac2;
                             color: #2c4c3c
                         }
+                    //    .all_save {
+                    //     height: 100px;
+                    //     width: 150px;
+                    //     border-radius:20px;
+                    //     border:none;
+                    //     outline:none;
+
+                    //    }
