--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="signin" id="up">
     <form class="form-box px-3" action="/save" method="post" onsubmit="check()">
-        <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
+
         <div class="form-input">
             <span><i class="fa-solid fa-user"></i></span>
             <input type="text" name="users[name]" placeholder="Username" tabindex="10" required>
@@ -33,7 +33,7 @@
             </button>
         </div>
         <div class="text-right">
-            <a href="#" class="forget-link" style="color:#ff574e">
+            <a href="forgot_pwd" class="forget-link" style="color:#ff574e">
                 Forgot Password?
             </a>
         </div>
@@ -43,6 +43,7 @@
 Login
             </a>
         </div>
+         <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
     </form>
     <div>
         <%=image_tag( "signup_img.webp", alt: "like", class:"signup_image" ) %>
