--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -22,7 +22,7 @@
             </button>
         </div>
         <div class="text-right">
-            <a href="#" class="forget-link" style="color:#ff574e">
+            <a href="forgot_pwd" class="forget-link" style="color:#ff574e">
                 Forgot Password?
             </a>
         </div>
