Adding display question

--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -129,7 +129,7 @@
                             margin: 4px, 4px;
                             padding: 4px;
                             width: 70%!important;
-                            top: 1000px;
+                            // margin-top: 500px;
                             background-color: white !important;
                             white-space: nowrap;
                         }
@@ -224,11 +224,3 @@
                             background-color: #f1eac2;
                             color: #2c4c3c
                         }
-                    //    .all_save {
-                    //     height: 100px;
-                    //     width: 150px;
-                    //     border-radius:20px;
-                    //     border:none;
-                    //     outline:none;
-
-                    //    }
