--- a/app/views/home/review.html.erb
+++ b/app/views/home/review.html.erb
@@ -7,9 +7,8 @@
             <i class="fa fa-envelope icon"></i>
             <input class="input-field" type="email" placeholder="abc1@fwsa.in"><br>
             <i class="fa fa-messages icon" style="color:white"></i>
-            <%# <i class="fa-solid fa-messages" style="color:red"></i> %>
+          <i class="fa-solid fa-messages" style="color:red"></i>
             <textarea class="input-field" type="text" style="height: 200px; width: 400px" placeholder="Type message here . . ."></textarea><br>
         </div>
   </form>
 </div>
-<%= image_tag("review.jpg", alt: "like" ,class: "review_bg") %>
