--- a/app/views/quiz/game.html.erb
+++ b/app/views/quiz/game.html.erb
@@ -9,7 +9,7 @@
                         <%=l.name%>
                     </h1>
                 </div>
-            <%else%>
+
             <%end%>
     </div>
     <span><i class="fa-solid fa-timer"></i></span>
@@ -24,7 +24,7 @@
                 <%else%>
                     <%= render partial:"quiz"%>
                 <%end%>
-    <%else%>
+       <%else%>
     <%t=Question.last%>
         <% if t%>
             <%case t.kind_of_question%>
@@ -41,14 +41,15 @@
                 <%= render partial: "quiz"%>
          <%end%>
     <%end%>
+
 </div>
 <div class="overflow">
     <div class="images">
              <a href="/quiz/display1/1" id="">
             <%=image_tag( "1.png", alt: "like" ,class:"question_image") %>
             </a>
-
-        <%Question.all.each do |t|%>
+<%$question_records = Question.where(assessments_id: l.id)%>
+        <%$question_records.all.each do |t|%>
             <%case t.kind_of_question%>
                 <% when "Quiz" %>
                 <a href="/quiz/display/<%=t.id%>" id="<%=t.id%>">
@@ -98,4 +99,3 @@
     }
 
 </script>
-
