--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -4,11 +4,11 @@
         <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
         <div class="form-input">
             <span><i class="fa fa-envelope-o"></i></span>
-            <input type="email" name="users[email]" placeholder="Mail Address" tabindex="10" required>
+            <input type="email" name="email" placeholder="Mail Address" tabindex="10" required>
         </div>
         <div class="form-input">
             <span><i class="fa-solid fa-key"></i></span>
-            <input type="password" name="users[email]" placeholder="Password" required>
+            <input type="password" name="password" placeholder="Password" required>
         </div>
         <div class="mb-3">
             <div class="custom-control custom-checkbox">
