--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -26,7 +26,7 @@
                             margin-top: 5%;
                         }
 
-                        input[type='radio'] {
+                        .game input[type='radio'] {
                             -webkit-appearance: none;
                             width: 20px;
                             height: 20px;
@@ -36,11 +36,11 @@
                             box-shadow: 0 0 5px 0px #f1eac2;
                         }
 
-                        input[type='radio']:hover {
+                        .game input[type='radio']:hover {
                             box-shadow: 0 0 5px 0px#f1eac2;
                         }
 
-                        input[type='radio']:before {
+                        .game input[type='radio']:before {
                             content: '';
                             display: block;
                             width: 60%;
