--- a/app/views/assessments/_tf.html.erb
+++ b/app/views/assessments/_tf.html.erb
@@ -1,4 +1,4 @@
-<div class="area" >
+
 <div class="disp quiz">
         <div class="disp qtns">
         <div class="disp_qtn"> <%=record.question%></div>
@@ -9,7 +9,7 @@
         <div class="disp opt1"><input type="radio" name="answer"> <%=record.option1%></div>
         <div class="disp opt2"><input type="radio" name="answer"><%=record.option2%></div>
 </div>
- <ul class="circles">
+ <%# <ul class="circles">
                     <li></li>
                     <li></li>
                     <li></li>
@@ -20,6 +20,6 @@
                     <li></li>
                     <li></li>
                     <li></li>
-            </u>
+            </u> %>
 
-</div>
+
