--- a/app/views/assessments/display_questions.html.erb
+++ b/app/views/assessments/display_questions.html.erb
@@ -1,35 +1,104 @@
 
 <div id="disp_questions">
-<%$record.each do |t|%>
+<div id="time_count">1
+</div>
+<%for t in $record do %>
 <div class="disp_quiz" style="display:none;">
-<%=t.question%>
-
+<%= t.question%>
 <%=t.option1%>
 <%=t.option2%>
 <%=t.option3%>
 <%=t.option4%>
+<% if t.kind_of_question=="True or false"%>
+<form action="/reports_save" method="post" onsubmit="report()">
+<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+<input type="hidden" name="id" value ="<%= t.id%>">
+<input type="hidden" , name="assessments_id" value="<%= t.assessments_id%>">
+<div class="disp qtns">
+        <div class="disp_qtn"> <%=t.question%></div>
 </div>
+<div class="disp_opts">
+<div class="disp_row">
+
+        <div class="disp opt1"><input type="submit" name="user_answer" value="<%=t.option1%>" ></div>
+        <div class="disp opt2"><input type="submit" name="user_answer" value="<%=t.option2%>"></div>
+</div>
+</div>
+</form>
+<%elsif t.kind_of_question=="Fillup"%>
+<form action="/reports_save"  onsubmit="report()"method="post">
+<input type="hidden" name="id" value ="<%= t.id%>">
+<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+<div class="disp qtns">
+<input type="hidden" , name="assessments_id" value="<%= t.assessments_id%>">
+        <div class="disp_qtn"> <%=t.question%></div>
+</div>
+<div class="disp_opts">
+<div class="disp_row_fillup">
+        <div class="disp opt1"><input type="text" name="user_answer"><button>Next</button></div>
+</div>
+</div>
+</form>
+<%else%>
+       <form action ="/reports_save" method="post" >
+       <input type="hidden" name="id" value ="<%= t.id%>">
+       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+      <div class="disp qtns">
+         <div class="disp_qtn"> <%=t.question%></div>
+         <input type="hidden" , name="assessments_id" value="<%= t.assessments_id%>">
+         </div>
+       <div class="disp_opts">
+
+       <div class="disp_row">
+
+            <div class="disp opt1">
+              <input type="submit" name="user_answer" value="<%=t.option1%>" >
+            </div>
+
+            <div class="disp opt2">
+           <input type="submit" name="user_answer" value="<%=t.option2%>" >
+            </div>
+        </div>
+        <div class="disp_row">
+        <div class="disp opt3">
+        <input type="submit" name="user_answer" value="<%=t.option3%>" >
+        </div>
+
+        <div class="disp opt4">
+        <input type="submit" name="user_answer" value="<%=t.option4%>" >
+        </div>
+        </form>
+        </div>
+</div>
+
 <%end%>
 </div>
-<div id="time_count">1
+
+
+<%end%>
 </div>
+
+
 <script>
 function display_show(){
   let divs = document.getElementById("disp_questions");
   let len = divs.getElementsByClassName("disp_quiz").length;
-  console.log(len);
   for (let index = 0; index < len; index++) {
-    console.log(index);
     setTimeout(() => {
       if(index==0){
         divs.getElementsByClassName("disp_quiz")[index].style.display="block";
       }else{
-        for (let i = index; i < len; i--) {
+        for (let i = (index-1); i >=0; i--) {
           console.log(i);
+          divs.getElementsByClassName("disp_quiz")[i].style.display="none";
+          divs.getElementsByClassName("disp_quiz")[index].style.display="block";
+          if(i == len-4){
+
+          }
         }
       }
 
-  }, 60000*index);
+  }, 6000*index);
   }
      timerss();
 }
@@ -40,14 +109,17 @@ function timerss(){
 
   let timers = setInterval(() => {
      timer.innerHTML = con++;
+
   }, 1000);
 
   setTimeout(() => {
     clearInterval(timers);
 timerss();
-    }, 60000);
+    }, 6000);
 }
-
+function report() {
+  window.location.href="/reports_save";
+}
 </script>
 
 
