--- a/app/views/quiz/game.html.erb
+++ b/app/views/quiz/game.html.erb
@@ -48,7 +48,7 @@
              <a href="/quiz/display1/1" id="">
             <%=image_tag( "1.png", alt: "like" ,class:"question_image") %>
             </a>
-<%$question_records = Question.where(assessments_id: l.id)%>
+<%$question_records = Puzzle.where(assessments_id: l.id)%>
         <%$question_records.all.each do |t|%>
             <%case t.kind_of_question%>
                 <% when "Quiz" %>
