--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -171,10 +171,8 @@
                         #kinds_of_questions {
                             background: #3e313547;
                             padding: 20px 20px;
-                            margin-left: 74%;
-                            margin-top: -15%;
                             border-radius: 20px;
-                            position: absolute;
+                            // position: absolute;
                         }
 
                         #kinds_of_questions input {
@@ -224,3 +222,7 @@
                             background-color: #f1eac2;
                             color: #2c4c3c
                         }
+
+
+
+
