--- a/app/views/assessments/game_pin.html.erb
+++ b/app/views/assessments/game_pin.html.erb
@@ -7,6 +7,9 @@
 <button type="submit" >Enter</button>
 </form>
 </div>
+<div class="left">
+<%= render partial:"fillup_design"%>
+</div>
 <script>
 function check() {
     str1 = parseInt("<%= $random_no%>");
