Create assessment page redesigned

--- a/app/views/assessments/quiz_design.html.erb
+++ b/app/views/assessments/quiz_design.html.erb
@@ -8,7 +8,7 @@
       <% qtn_type.each do |t|%>
        <div class="ques-div">
           <%= t.question%>
-          <a href="/edit/<%=t.id%>">Edit</a>
+          <a href="/edit_page/<%=t.id%>">Edit</a>
            <a href="/delete/<%=t.id%>">Delete</a>
        </div>
      <%end%>
