--- a/app/assets/stylesheets/creategame.scss
+++ b/app/assets/stylesheets/creategame.scss
@@ -197,14 +197,12 @@
     }
 
     .assessment {
-        height: 300px;
-        width: 400px;
-        margin-top: 20%;
-        margin-left: 35%;
-        background-color: #c1c1c1;
+        height: 70%;
+        width: 70%;
+        margin-top: 10%;
+        margin-left: 15%;
+        background-color: rgb(227, 255, 223);
         padding: 30px 30px;
-        height: 200px;
-        width: 400px;
         border-radius: 20px;
     }
 
@@ -213,10 +211,34 @@
         outline: none;
         border-radius: 20px;
         padding: 20px 20px;
-        width: 350px;
+        width: 50%;
+        background-color:#88c681;
         margin-bottom: 10px;
+        // background-color: #21502f;
+        color: white !important;
         font-weight: bold;
         font-size: 20px;
+    }
+    .assessment textarea {
+        background-color:#88c681;
+        border: none;
+        height: 100px;
+        width: 600px;
+        color: black !important;
+        resize:none;
+    }
+    .assessment .upload {
+        background-color: #88c681;
+        border: none;
+        outline:none;
+        border-radius:  20px;
+        height: 20%;
+        width: 30%;
+    }
+    .assessment .upload #icon {
+        font-size: 40px;
+        padding-left: 43%;
+        padding-top: 20%
     }
 
     .assessment .submit {
@@ -239,3 +261,42 @@
     .assessment_title h1 {
         color: black !important;
     }
+    .assessment .submit {
+        width: 10%;
+        height: 100%;
+        border-radius: 5px;
+        border: none;
+        background-color: #21502f;
+        color: white;
+        font-size: 20px;
+        margin-top: 20px;
+    }
+
+    .assessment .submit:hover {
+        background-color: white;
+        color: #21502f;
+        border: 1px solid #21502f;
+    }
+   .assessment .file-input::-webkit-file-upload-button {
+        visibility: hidden;
+      }
+     .assessment .file-input::before {
+        content: 'Upload';
+        display: inline-block;
+        border: 1px solid  #21502f;
+        border-radius: 5px;
+        padding: 5px 10px;
+        outline: none;
+        white-space: nowrap;
+        cursor: pointer;
+
+        text-shadow: 1px 1px #fff;
+        color: transparent;
+
+     }
+  .assessment .file-input {
+    width: 50%;
+    margin-left: 30%;
+
+  }
+
