--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -222,7 +222,27 @@
                             background-color: #f1eac2;
                             color: #2c4c3c
                         }
-
-
-
+// game page
+.sidebar {
+    background-color: #2c4c3c;
+    width: 20%;
+    margin-top: 7%;
+    height: 87vh;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    position:fixed;
+}
+.sidebar div {
+   padding: 20px 20px;
+    margin-left: 50px;
+    // margin-bottom: 50px;
+}
+.sidebar #sidebar-icon {
+    font-size: 40px;
+    color: white !important;
+}
+.fa-book-copy {
+    font-size: 40px;
+    color: white !important;
+}
 
