--- a/app/views/assessments/_fillup_design.html.erb
+++ b/app/views/assessments/_fillup_design.html.erb
@@ -3,7 +3,10 @@
         <div class="question_type_area">
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
 
-           <div class="ques-icon-div"><i class="fa-solid fa-image" id="img-icon"></i>
+            <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
+           </div>
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
+           <div  id="f-upload" class="display"><input type="file" name="images"></div>img-icon"></i>
            <input type="file" id="my_file" style="display: none;" />
            </div>
            <div class="ques-textarea-div"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
@@ -26,3 +29,16 @@
 </div>
 
 
+<script>
+
+function uploadPic(){
+   document.getElementById("txt-area").classList.toggle("display");
+   document.getElementById("f-upload").classList.toggle("display");
+}
+
+    function display() {
+        let div = document.getElementById("kinds_of_questions");
+        div.style.display = "block";
+    }
+
+</script>
