--- a/app/views/assessments/_quiz_template.html.erb
+++ b/app/views/assessments/_quiz_template.html.erb
@@ -1,4 +1,44 @@
-<form action="/question" method="post">
+ <%if $puzzles%>
+<form action="/edit/<%=$puzzles.id%>" method="post" enctype="multipart/form-data">
+<div class="col-7" id="question_div">
+
+        <div class="question_type_area">
+        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+           <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
+           </div>
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."><%= $puzzles.question%></textarea></div>
+           <div  id="f-upload" class="display" style="display:none"><input type="file" name="images"></div>
+        </div>
+        <div class="answer-type-area">
+        <div class="disp_opts">
+          <div class="quiz_row">
+
+           <div class="disp opt1"><input type="radio" name="option"  value="<%=$puzzles.answer%>"><input type="text" name="option1" value="<%=$puzzles.option1%>" placeholder="Add answer 1"></div>
+           <div class="disp opt2"><input type="radio" name="option"  value="<%=$puzzles.answer%>"><input type="text" name="option2" value="<%=$puzzles.option2%>" placeholder="Add answer 2"></div>
+          </div>
+        </div>
+        <div class="quiz_row">
+        <div class="disp opt3">
+        <input type="radio" name="option" value="<%=$puzzles.answer%>">
+        <input type="text" name="option3" placeholder="Add answer 3" value="<%=$puzzles.option3%>">
+        </div>
+
+        <div class="disp opt4">
+        <input type="radio" name="option" value="d" value="<%=$puzzles.answer%>">
+        <input type="text" name="option4"  placeholder="Add answer 4" value="<%=$puzzles.option4%>">
+        </div>
+        </div>
+        </div>
+    <div class="btn-ques-div">
+      <button id="cancel-btn">Cancel</button>
+      <button type="submit" id="submit-btn">Submit</button>
+    </div>
+    </form>
+</div>
+</div>
+</div>
+<%else%>
+<form action="/question" method="post" enctype="multipart/form-data">
 <div class="col-7" id="question_div">
 
         <div class="question_type_area">
@@ -7,7 +47,7 @@
            <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
            </div>
            <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
-           <div  id="f-upload" class="display"><input type="file"></div>
+           <div  id="f-upload" class="display" style="display: none;"><input type="file" name="images"></div>
         </div>
         <div class="answer-type-area">
         <div class="disp_opts">
@@ -37,3 +77,17 @@
 </div>
 </div>
 </div>
+<%end%>
+<script>
+
+function uploadPic(){
+   document.getElementById("txt-area").classList.toggle("display");
+   document.getElementById("f-upload").classList.toggle("display");
+}
+
+    function display() {
+        let div = document.getElementById("kinds_of_questions");
+        div.style.display = "block";
+    }
+
+</script>
