--- a/app/views/assessments/_tf_design.html.erb
+++ b/app/views/assessments/_tf_design.html.erb
@@ -1,11 +1,13 @@
-
+<%if $puzzles%>
 <form action="/question" method="post">
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
 
 <div class="col-7" id="question_div">
         <div class="question_type_area">
-           <div class="ques-icon-div"><i class="fa-solid fa-image" id="img-icon"></i>
-           <input type="file" id="my_file" style="display: none;" />
+           <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
+           </div>
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
+           <div  id="f-upload" class="display"><input type="file" name="images"></div>
            </div>
            <div class="ques-textarea-div"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
         </div>
@@ -26,3 +28,48 @@
 </div>
 </div>
 </div>
+
+<%else%>
+<form action="/question" method="post">
+        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+
+<div class="col-7" id="question_div">
+        <div class="question_type_area">
+           <div class="ques-icon-div" onclick="uploadPic()"><i class="fa-solid fa-image" id="img-icon"></i>
+           </div>
+           <div class="ques-textarea-div" id="txt-area"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
+           <div  id="f-upload" class="display"><input type="file" name="images"></div>
+           </div>
+           <div class="ques-textarea-div"><textarea id="text-area-question"name="question" placeholder="Type your question here...."></textarea></div>
+        </div>
+        <div class="answer-type-area">
+        <div class="disp_opts">
+          <div class="quiz_row">
+
+           <div class="disp opt1"><input type="radio" name="option" value="a"><input type="text" name="option1" value="TRUE" placeholder="Add answer 1" ></div>
+           <div class="disp opt2"><input type="radio" name="option" value="b"><input type="text" name="option2" value="FALSE" placeholder="Add answer 2"></div>
+          </div>
+        </div>
+
+        </div>
+    <div class="btn-ques-div">
+      <button id="cancel-btn">Cancel</button>
+      <button type="submit" id="submit-btn">Submit</button></form>
+    </div>
+</div>
+</div>
+</div>
+<%end%>
+<script>
+
+function uploadPic(){
+   document.getElementById("txt-area").classList.toggle("display");
+   document.getElementById("f-upload").classList.toggle("display");
+}
+
+    function display() {
+        let div = document.getElementById("kinds_of_questions");
+        div.style.display = "block";
+    }
+
+</script>
